# ross

./: .gitignore  README.md  calendar-tools.mjs  daily-briefing.mjs  dev-tools.mjs  package-lock.json  package.json  ross-bridge.mjs  ross-core.mjs  save-keys.mjs  setup-google.mjs  start-ross.sh  streaming-listener.mjs  talk.mjs  wake-listener.mjs
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ClapDetector.jsx  DevPanel.jsx  FilesPanel.jsx  LoginScreen.jsx  Panels.jsx  Sidebar.jsx  TopBar.jsx  VoiceOrb.jsx  WakeWord.jsx  WaveCanvas.jsx
src/hooks/: useRoss.js
